argocd/k8s/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: argocd-k8s-headers
  namespace: argocd
spec:
  headers:
    customResponseHeaders:
      X-XSS-Protection: "true"
#---
#apiVersion: traefik.containo.us/v1alpha1
#kind: TLSOption
#metadata:
#  name: baseline
#  namespace: argocd
#spec:
#  minVersion: VersionTLS12
#  cipherSuites:
#      - TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256
#      - TLS_RSA_WITH_AES_256_GCM_SHA384
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.lab.local`) && PathPrefix(`/`) 
      priority: 10
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`argocd.lab.local`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls:
    secretName: argocd-tls-cert
